Use initialized canvas to create network icons.

Remove rarely used ctor.

BUG=611616

Review-Url: https://codereview.chromium.org/2016833002
Cr-Commit-Position: refs/heads/master@{#396326}

Former-commit-id: 07b5fad29dd278dee342363c7562bcec1fd729de